# SplComp

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  build.rs
examples/: another_too_general.spl  assign.spl  binding_time_analysis.spl  ctest.spl  disallow_overloading_polymorphic.spl  equals.spl  fun_glob_var_unique.spl  heap_objects.spl  id.spl  if_else_simple.spl  interesting.c  interesting.spl  listcodegen.spl  lists.spl  local_vars.spl  mutrec.spl  nested_list.spl  nested_tuple.spl  nested_tuple2.spl  parser_problems.spl  pass_by_reference.spl  pass_by_value.spl  prepend.spl  print.spl  return_shizzle.spl  returns.spl  reverse.spl  shadowing.spl  side_effect_eval.spl  stack_frame_example.spl  string.spl  string_literal.spl  sum.spl  syntax_error.spl  too_general.spl  topological_sort.spl  tuple.spl  types.spl  var_decl_in_statement.spl  vowels.spl  (+2 more)
material/: README.md
material/report/: report.tex
material/tests/: 3D.spl  Example.spl  a_bit_of_everything.spl  assignment_to_builtin.spl  brainfuck.spl  comment.spl  constants.spl  cyclic.spl  higher_order_functions.spl  identity.spl  infinite_type_shouldfail.spl  list_ops.spl  lists.spl  monomorph.spl  more_parenthesis.spl  multiple_recursion.spl  multiple_recursion_values.spl  mutrec.spl  overloading.spl  polymorphic_value_again_shouldfail.spl  polymorphic_value_indirect_shouldfail.spl  polymorphic_value_shouldfail.spl  problematic.spl  problematic_programs.spl  recursion.spl  return_ill_typed.spl  return_well_typed.spl  (+8 more)
src/: error.rs  lib.rs  main.rs  scanner.rs  token.rs
tests/: external.rs
(+30 files in other folders)
